www/stylus/checkins.styl
#full-modal
    // Maps
    #map
        background #f2f0e9
        height 125px
        margin 0
        position relative
        width 100%
        z-index 12000

    h2
        font-size 18px

    .venue
        background no-repeat 100% 50% / 150px auto
        border-bottom 1px solid #8a8a8a
        border-bottom 1px solid #cdcdcd
        color #001017
        display block
        min-height 100px

        h3
            background rgba(239, 239, 239, .75)
            border-bottom 1px solid #cdcdcd
            font-size 22px
            line-height 1.6em
            overflow hidden
            text-overflow ellipsis
            white-space nowrap

        p
            font-size 12px
            line-height 1.3em

    #loading-text
        margin 20px 0 0
        text-align center

.checkin
    border 1px solid gray
    clear both
    margin 5px auto
    max-width 90%
    padding 5px
    position relative

    &:after
        clear both
        content ""
        display block

    .profile-photo
        height 50px
        margin 0 5px 0 0
        width 50px

    .venue
        overflow hidden
        text-overflow ellipsis
        white-space nowrap

    .arrow
        position absolute
        right 10px
        top: 50%
        transform translate(0%, -50%)
        -moz-transform translate(0%, -50%)
        -webkit-transform translate(0%, -50%)

